add variable enviroment of pom

--- a/pom.xml
+++ b/pom.xml
@@ -185,7 +185,87 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<profiles>
+
+		<profile>
+			<id>product</id>
+			<properties>
+				<profiles.activation>product</profiles.activation>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>qa</id>
+			<properties>
+				<profiles.activation>qa</profiles.activation>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>intra</id>
+			<properties>
+				<profiles.activation>intra</profiles.activation>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>dev</id>
+			<properties>
+				<profiles.activation>dev</profiles.activation>
+			</properties>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+	</profiles>
+
 	<build>
-		<finalName>apiserver</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.7</version>
+				<executions>
+					<execution>
+						<phase>prepare-package</phase>
+						<configuration>
+							<target>
+								<move file="${project.build.outputDirectory}/apiserver_${profiles.activation}.properties"
+									tofile="${project.build.outputDirectory}/apiserver.properties" overwrite="true" />
+								<move file="${project.build.outputDirectory}/log4j_deploy.properties" tofile="${project.build.outputDirectory}/log4j.properties"
+									overwrite="true" />
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<packagingExcludes>
+						WEB-INF/classes/apiserver_*.properties,
+						WEB-INF/classes/log4j_*.properties,
+						WEB-INF/lib/commons-logging-*.jar
+					</packagingExcludes>
+				</configuration>
+			</plugin>
+
+		</plugins>
 	</build>
 </project>
