make it can accept url not end with a slash and contains a dot

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,11 +11,11 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	
-	<listener>  
+	<!-- <listener>  
         <listener-class>  
             org.springframework.web.context.request.RequestContextListener  
         </listener-class>  
-</listener>  
+	</listener>   -->
 
 	<filter>
 		<filter-name>EncodingFilter</filter-name>
